add token in fileUpload to remove 403 add javadoc in Configuration for spotbugs

--- a/src/main/resources/templates/fileUpload.html
+++ b/src/main/resources/templates/fileUpload.html
@@ -18,7 +18,7 @@
 <main th:fragment="bodycontent">
 
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <!-- <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/> -->
+        <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload Files">
     </form>
