--- a/src/main/resources/templates/fileUpload.html
+++ b/src/main/resources/templates/fileUpload.html
@@ -17,7 +17,7 @@
 </header>
 <main th:fragment="bodycontent">
 
-    <form action="/upload" method="post" enctype="multipart/form-data">
+    <form action="/rheinjug2/file" method="post" enctype="multipart/form-data">
         <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload Files">
