--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -14,16 +14,11 @@
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li>
-                <a th:href="@{/rheinjug2/student/events}"><span class="icono-leftArrow icono-"></span> zurück zu Übersicht</a>
-            </li>
-            <li>
                 <a th:href="@{/rheinjug2/student/events}" href="/home"> Veranstaltugen Übersicht </a>
             </li>
             <li>
-                <a th:href="@{/rheinjug2/student/visitedevents}"> belegte Veranstaltungen</a>
-            </li>
-            <li>
-                <a th:href="@{/rheinjug2/student/reportsubmit}"> Bericht abgeben</a>
+                <a th:href="@{/rheinjug2/student/visitedevents}" href="/rheinjug2/student/personal">
+                    Meine Veranstaltungen</a>
             </li>
             <li class="active">
                 <a th:href="@{/rheinjug2/student/creditpoints}">CP beantragen</a>
@@ -34,6 +29,52 @@
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary"> CP beantragen</h1>
+    <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px">
+        <table class="table table-borderless">
+            <thead>
+            <tr>
+                <th>Besuchte Veranstaltungen</th>
+                <th>Erworbene CP</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Double Feature: Webanwendungen mit MVC 1.0 / Typparameter</td>
+                <td><span>&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span></td>
+            </tr>
+            <tr>
+                <td>Double Feature: Webanwendungen mit MVC 1.0 / Typparameter (2)</td>
+                <td><span>&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span></td>
+            </tr>
+            </tbody>
+        </table>
+        <button type="submit" class="btn col-12 btn-outline-success"> 1 CP Bentagen</button>
+    </div>
+    <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Besuchte Veranstaltungen</th>
+                <th>Erworbene CP</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Double Feature: Webanwendungen mit MVC 1.0 / Typparameter</td>
+                <td><span>&nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span></td>
+            </tr>
+            <tr>
+                <td>Double Feature: Webanwendungen mit MVC 1.0 / Typparameter (2)</td>
+                <td><span>&nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span></td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="alert alert-danger text-center">
+            CP Beantragung ist noch nicht möglich. sie brauchen mindestens <sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
+        </div>
+    </div>
+
+
 </main>
 </body>
 </html>
