add all orga html templates

--- a/src/main/resources/templates/orga_creditpoints.html
+++ b/src/main/resources/templates/orga_creditpoints.html
@@ -27,6 +27,24 @@
 </header>
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
+    <div class="container bg-light rounded shadow-lg " style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
+        <div class="row mx-1 my-1 border-bottom">
+            <div class="col-12 text-secondary text-center my-1">
+                <span>Student Name:</span>
+                <span>&nbsp;Ein Student</span>
+            </div>
+        </div>
+        <div>
+            <div class="row mx-1 my-1">
+                <div class="col-12 col-sm-6  my-1">
+                    <button class="btn btn-primary btn-block" type="button">Antrag herunterladen</button>
+                </div>
+                <div class="col-12 col-sm-6  my-1">
+                    <button class="btn btn-primary btn-block" type="button">Antrag ausdrucken</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 </body>
 </html>
