--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -66,6 +66,25 @@
                 <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button>
             </div>
         </form>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+
+                    <form action="/rheinjug2/file" method="post" enctype="multipart/form-data">
+                        <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
+                        <input type="file" name="file" multiple>
+                        <input type="submit" value="Upload Files">
+                        <!-- <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button> -->
+                    </form>
+
+                </div>
+                <div class="col-12 col-sm-6">
+                    <a th:href="@{/rheinjug2/download}">
+                        <button>Downloade deine momentane Zusammenfassung</button>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 </body>
