--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -28,11 +28,11 @@
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
-    <div>
+    <div th:remove="all-but-first" th:each="event : ${events}">
         <div class="container bg-light rounded shadow-lg " style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
             <div class="row border-bottom  mx-1 my-1 align-content-center">
                 <div class="col-12 text-secondary text-center  my-1">
-                    <h2 class="font-weight-bold">
+                    <h2 class="font-weight-bold" th:text="${event.getTitle()}">
                         Double Feature: Webanwendungen mit MVC 1.0 / Typparameter
                     </h2>
                 </div>
