--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -33,7 +33,8 @@
     <div class="container bg-light rounded shadow-lg text-secondary "
          style=" padding: 10px; margin-top: 40px; margin-bottom: 50px">
         <p th:text="${message}" th:if="${message ne null}" class="alert alert-primary"></p>
-        <form>
+        <form action="summarysubmit" method="post">
+            <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
             <div class="form-group">
                 <div>
                     <label for="subject">Betreff</label>
@@ -56,8 +57,8 @@
             </div>
             <div class="form-group">
                 <label for="Inhalt">Inhalt</label>
-                <textarea class="form-control" id="Inhalt" rows="20"
-                          placeholder="Zusammenfassung hier schreiben..."></textarea>
+                <textarea class="form-control" id="Inhalt" name="Inhalt" rows="20"
+                          placeholder="Zusammenfassung hier schreiben..."> hier muss die Vorlage eingebunden werden</textarea>
             </div>
             <div class="form-group secondary">
                 <label class="" for="Todaysdate">heutige datum</label>
@@ -67,21 +68,31 @@
                 <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button>
             </div>
         </form>
+        <div>
+            <a th:href="@{/rheinjug2/download/presentation}">
+                <p th:text="${noPresentation}" th:if="${noPresentation ne null}" class="alert alert-primary"></p>
+                <button class="btn btn-outline-success">Downloade die Vorlage</button>
+            </a>
+        </div>
+    </div>
+    <h2 class="text-center text-secondary"> Lade deine Zusammenfassung hoch </h2>
+    <div class="container bg-light rounded shadow-lg text-secondary "
+         style=" padding: 10px; margin-top: 40px; margin-bottom: 50px">
         <div class="form-group">
-            <h3>Upload File Example</h3>
-            <div class="row">
+            <div class=" row">
                 <div class="col-12 col-sm-6">
                     <form action="reportsubmit" method="post" enctype="multipart/form-data">
                         <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
                         <input type="file" name="file" multiple>
-                        <input type="submit" value="Upload Files">
+                        <p></p>
+                        <input type="submit" class="btn btn-outline-success" value="Zusammenfassung hochladen">
                         <!-- <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button> -->
                     </form>
 
                 </div>
                 <div class="col-12 col-sm-6">
-                    <a th:href="@{/rheinjug2/download}">
-                        <button>Downloade deine momentane Zusammenfassung</button>
+                    <a th:href="@{/rheinjug2/download/file}">
+                        <button class="btn btn-outline-success">Downloade deine momentane Zusammenfassung</button>
                     </a>
                 </div>
             </div>
