--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -27,9 +27,8 @@
 </header>
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
-    <form method="post" th:action="@{/rheinjug2/orga/events}" class="form-inline">
-        <input type="hidden" name="meetup_events" value="">
-        <button type="submit" name="submit" value="submit_value" class="button">
+    <form action="#" method="POST" th:action="@{/rheinjug2/orga/events}">
+        <button class="btn btn-outline-secondary btn-block" type="submit">
             Veranstaltungen aktualisieren
         </button>
     </form>
